correcting the images on mobile site

--- a/style.css
+++ b/style.css
@@ -142,7 +142,9 @@ html, body {
   position: relative;
   opacity: 0.9;
   background-position: center;
-  background-size:contain;
+  background-size:cover;
+  width: 100%;
+  height: 100vh;
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
